--- a/user/bacic.html
+++ b/user/bacic.html
@@ -80,8 +80,6 @@
                     </tr>
                 </tbody>
             </table>
-            <button class="add-line">Add another line</button>
-            <button class="import-lines">Import lines</button>
         </div>
         <div class="section total-section">
             <div class="input-group">
@@ -202,7 +200,7 @@ h1 {
 }
 
 .total-section .input-group, .bank-details .input-group {
-    flex: 1 1 45%;
+    flex: 1 2 45%;
     margin-right: 10px;
 }
 
@@ -213,7 +211,7 @@ h1 {
 
 .signature button {
     padding: 10px 20px;
-    background-color: #007BFF;
+    background-color: #21A747;
     color: #fff;
     border: none;
     border-radius: 5px;
@@ -221,6 +219,7 @@ h1 {
 }
 
 .signature button:hover {
-    background-color: #0056b3;
+    background-color: white;
+    color:#21A747;
 }
 </style>
